# sqlx-askama-template

./: .gitignore  Cargo.toml  README-CN.md  README.md
examples/: example_actix.rs  example_adapter.rs  example_axum.rs  example_macro.rs  example_marco.rs  example_ntex.rs
sqlx-askama-template-macro/: Cargo.toml
sqlx-askama-template-macro/src/: lib.rs
src/: db_adapter.rs  error.rs  lib.rs  sql_template_execute.rs  sql_templte_execute.rs  template_adapter.rs  template_arg.rs
src/db_adapter/: any.rs  mod.rs  mysql.rs  page_adapter.rs  postgres.rs  sql_utils.rs  sqlite.rs  template_adapter.rs
src/v3/: db_adapter.rs  db_type.rs  mod.rs  sql_template_execute.rs  sql_templte_execute.rs  template_adapter.rs  template_arg.rs
