[package]
name = "sqlx-askama-template"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
description = "Type-safe SQL templates with Askama and SQLx"
repository = "https://github.com/gouhengheng/sqlx-askama-template"
readme = "README.md"
keywords = ["sqlx", "askama", "database", "template"]
categories = ["database", "template-engine"]

[workspace]
members = [".", "sqlx-askama-template-macro"]


[dependencies]

sqlx-core = { version = "0.8", default-features = false, features = ["any"] }
sqlx-askama-template-macro = { path = "./sqlx-askama-template-macro" }
#sqlx-askama-template-macro = "0.1.0"
askama = "0.13.0"
futures-core = "0.3.31"
thiserror = "2.0.12"
futures-util = "0.3.31"
tracing = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
    "all-databases",
    "runtime-tokio",
    "macros",
] }
