[package]
name = "sqlx-askama-template"
version.workspace = true
edition.workspace = true
readme = "README.md"
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace]
members = [".", "sqlx-askama-template-macro"]
[workspace.package]
version = "0.4.0-alpha.1"
edition = "2024"
rust-version = "1.86.0"
keywords = ["sqlx", "askama", "database", "template"]
categories = ["database", "template-engine"]
license = "Apache-2.0"
description = "Type-safe SQL templates with Askama and SQLx"
repository = "https://github.com/gouhengheng/sqlx-askama-template"

[dependencies]
sqlx-core = { version = "0.9.0-alpha.1", default-features = false, features = ["any"] }
sqlx-askama-template-macro = { path = "./sqlx-askama-template-macro", version = "0.4.0-alpha.1"}
#sqlx-askama-template-macro = "0.2.1"
askama = "0.15"
futures-core = "0.3.31"

futures-util = "0.3.31"
tracing = { version = "0.1" }


[dev-dependencies]
#tokio = { version = "1.0", features = ["full"] }
smol={version = "2"}
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = [
    "all-databases",
    #"runtime-tokio",
    "runtime-smol",
    "macros",
] }
env_logger="0.11"