[package]
name = "sqlx-askama-template-macro"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Procedural macro for SQLx + Askama integration"
repository = "https://github.com/gouhengheng/sqlx-askama-template"
keywords = ["sqlx", "askama", "macro"]
categories = ["database", "template-engine"]
[lib]
proc-macro = true

[dependencies]

syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
