[package]
name = "sqlx-askama-template-macro"
version.workspace = true
edition.workspace = true
description = "Procedural macro for SQLx + Askama integration"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
[lib]
proc-macro = true

[dependencies]

syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
